--- a/lvsio/templates/sync_id.html
+++ b/lvsio/templates/sync_id.html
@@ -3,7 +3,6 @@
 <head>
     <title>Synchronized Sliders</title>
      <link rel="icon" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQYV2PYF773PwAGewLSGezkXwAAAABJRU5ErkJggg=="/>
-    <!-- script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.socket.io/3.1.3/socket.io.min.js"></script>
 
@@ -66,7 +65,6 @@ function decrementValue()
     value--;
     document.getElementById('number').value = value;
     gen_event();
-   // https://www.tutorialspoint.com/how-can-i-trigger-an-onchange-event-manually-in-javascript
 }
 
 
@@ -75,6 +73,12 @@ function decrementValue()
 
 </head>
 <body>
+
+<div>
+
+ <input id="btntest" type="button" value="to main-menu" onclick="window.location.href = 'http://localhost:8000/lvsio'" />
+
+</div>
 
 <form>
    <input type="button" onclick="decrementValue()" value="-" />
