--- a/lvsio/templates/flask_chat.html
+++ b/lvsio/templates/flask_chat.html
@@ -41,7 +41,7 @@
         }
       }) 
 
-      socket.on('frompydal', function(msg) {
+      socket.on('pgs_reload', function(msg) {
                 window.location.reload(true);
                 console.log('sio_pusher: ' + msg);
             });
