--- a/flvsio/templates/sockjs/index.html
+++ b/flvsio/templates/sockjs/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="http://cdn.jsdelivr.net/sockjs/0.3/sockjs.min.js"></script>
+  <!-- script src="http://cdn.jsdelivr.net/sockjs/0.3/sockjs.min.js"></script -->
+
+<script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
   <script>
     $(function() {
       var conn = null;
@@ -122,7 +124,7 @@
 <div>
   <a id="connect" href="#">Connect</a>&nbsp;|&nbsp;Status: <span id="status">disconnected</span>
 </div>
-<div id="log" style="width: 60em; height: 20em; overflow:auto; border: 1px solid black">
+<div id="log" style="width: 50em; height: 12em; overflow:auto; border: 1px solid black">
 </div>
 <form id="chatform">
   <input id="text" type="text" />
