--- a/flvsio/templates/longtask.html
+++ b/flvsio/templates/longtask.html
@@ -18,23 +18,50 @@ body{
 [[end ]]
 
     <p>To test it, you need to run the celery-worker (. worker.sh) </p>
+    <p id='sio_status'>status</p>
     <button type="button">Run Celery Task</button>
     <br>
     Result: <span id="result"></span>
+    <br>
+    At begin: <span id="at_begin"></span>
+    <br>
+    At end: <span id="at_end"></span>
 
 <script>
     const resultElement = document.getElementById('result'),
-          client = io("[[ = t_vars['sio_serv_url'] ]]");
+          socket = io("[[ = t_vars['sio_serv_url'] ]]", {'forceNew': true} );
+
+    const at_begin = document.getElementById('at_begin'),
+          at_end = document.getElementById('at_end'), 
+          sio_status = document.getElementById('sio_status');
 
     let clientid = null;
 
-    client.on('longtask_register', function(id) {
+    socket.on('connect', function(result) {
+        sio_status.textContent = 'connect';
+    });
+    socket.on('reconnect', function(result) {
+        sio_status.textContent = 'reconnect';
+    });
+    socket.on('disconnect', function(result) {
+        sio_status.textContent = 'disconnect';
+    });
+
+
+    socket.on('longtask_register', function(id) {
         clientid = id;
     });
 
-    client.on('longtask_result', function(result) {
-        console.log('!!!!!!!!!!!!!!!');
+    socket.on('longtask_result', function(result) {
         resultElement.textContent = result;
+    });
+
+    socket.on('longtask_begin', function(result) {
+        at_begin.textContent = result;
+    });
+
+    socket.on('longtask_end', function(result) {
+        at_end.textContent = result;
     });
 
     document.querySelector('button').onclick = function() {
@@ -48,9 +75,21 @@ body{
         };
         request.send('clientid=' + clientid);
     };
+
+
+
+    document.addEventListener("visibilitychange", function() {
+       if (document.hidden){
+          // console.log("Browser tab is hidden")
+    
+           if((!socket) || (socket && socket.connected )){
+                 socket.disconnect(true);
+           }
+    
+       } else {
+        //   console.log("Browser tab is visible")
+           location.reload();
+       }
+    });
+
 </script>
-
-
-</body>
-</html>
-
