--- a/mlvsio/templates/js-sliders.html
+++ b/mlvsio/templates/js-sliders.html
@@ -25,6 +25,53 @@ p { padding: 1em; }
 .sync {
 width: 100%;
 }
+
+<!-- https://stackoverflow.com/questions/6890218/css-background-image-opacity -->
+
+#bg {
+  width: 100%;
+  height: 100%;
+}
+
+
+
+#id {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  opacity: 0.99;
+}
+
+#id::before {
+  content: "";
+  position: absolute;
+    width:  200px;
+    height: 200px;
+    background-size: 50% 50%;
+    opacity: 0.3;
+  z-index: -1;
+
+
+}
+
+
+
+.hero {
+/* Background pattern from Toptal Subtle Patterns */
+   width: 100%;
+   height: 100%;
+   background-image: url(  [[ = URL('static/logop4w.png') ]] );
+   background-size: 150px 150px;
+   background-repeat: no-repeat, no-repeat;
+
+}
+
+.bg-color {background:rgba(0,0,0,0);}
+.hero:hover .bg-color {background: rgba(0,0,0,.05);}
+
+
+
+
 </style>
 
 [[ end ]]
@@ -48,6 +95,8 @@ function debounce(func, timeout = 250){
 </script>
 
 
+<div class='hero'>
+<div class='bg-color'>
     <p id="status"></p>
 
     <!-- label for="slider1">(from 0 and 100):</label -->
@@ -61,6 +110,9 @@ function debounce(func, timeout = 250){
     <p id="sync_txt1"></p>
 
 
+</div>
+</div>
+
 <script>
 
  ! function (sio_url, init_vars, fi) {
@@ -73,9 +125,24 @@ function debounce(func, timeout = 250){
                   txt1 = document.getElementById('txt1'),
                   sync_txt1 = document.getElementById('sync_txt1'),
                   info =  document.getElementById('status');
+            const yourImg = document.querySelector('.hero'); 
                  
             info.innerHTML= 'disconnected; run chan_sio.py';
             info.style.color='red';
+
+set_size = function(v1, v2) {
+   v1 +=  150;
+   v2 +=  150;
+   let v1x = v1.toString() + 'px';
+   let v2x = v2.toString() + 'px';
+   console.log(v1x)
+   console.log(v2x)
+   if(yourImg && yourImg.style) {
+    yourImg.style.backgroundSize = v1x +' ' +  v2x;
+    }
+
+}
+
 
             const set_values= function(x) {
                let msg = null;
@@ -96,7 +163,8 @@ function debounce(func, timeout = 250){
 
             const get_values= function() {
                const js_vars = [ slider1.value   , slider2.value,  txt1.value ];
-               //console.log('!!!: ' , js_vars )
+               console.log('!!!: ' , parseInt(js_vars[0]) )
+               set_size(  parseInt(js_vars[0]), parseInt(js_vars[1])  ) 
                return  js_vars ; 
             }
 
@@ -122,6 +190,7 @@ function debounce(func, timeout = 250){
 
             socket.on('update_sliders', function(msg) {
                set_values(msg);
+               console.log( msg  )
            });
 
 
