+ live chart, + progress-bar

--- a/ssep4w/templates/stream.html
+++ b/ssep4w/templates/stream.html
@@ -2,7 +2,7 @@
 
 <p>This is the latest output: <span id="latest"></span></p>
 <!-- p>This is all the output:</p --->
-<p id="output">This is all the outpu: </p>
+<p id="output">This is all the output: </p>
 
 <script>
     const latest = document.getElementById('latest');
