--- a/ssep4w/templates/sse_chart.html
+++ b/ssep4w/templates/sse_chart.html
@@ -7,6 +7,10 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.css" rel="stylesheet">
 </head>
 <body>
+    <form method="get" action="[[=menu_url ]]">
+             <input type="submit" value="menu">
+    </form>
+
 <div class="container">
     <div class="row">
         <div class="col-12">
