--- a/ssep4w/templates/stream.html
+++ b/ssep4w/templates/stream.html
@@ -1,5 +1,10 @@
 [[extend 'layout.html']]
 
+<form method="get" action="[[=menu_url ]]">
+             <input type="submit" value="menu">
+         </form>
+
+
 <p>This is the latest output: <span id="latest"></span></p>
 <!-- p>This is all the output:</p --->
 <p id="output">This is all the output: </p>
