--- a/flvsio/templates/layout2.html
+++ b/flvsio/templates/layout2.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
     <style>.py4web-validation-error{margin-top:-16px; font-size:0.8em;color:red}</style>
     [[block page_head]]<!-- individual pages can customize header here -->[[end]]
-
 <style>
-
-    nav li ul li a {font-size: 0.9em; font-weight: 500;}
-    .pfooter p { margin: .4em .4em .4em 1.5em; }
+nav li ul li a {font-size: 0.95em; font-weight: 500;}
+.pfooter p {
+    margin: .5em .5em .5em .5em;
+    margin-left: 1em;
+}
 
 </style>
 
@@ -24,14 +25,13 @@
       <nav class="black">
         <!-- Logo -->
         <a href="[[=URL('index')]]">
-          <b><script>document.write(window.location.href.split('/')[3]);</script></b>
+          <b>Home <script>document.write(window.location.href.split('/')[3]);</script></b>
         </a>
         <!-- Do not touch this -->
         <label for="hamburger">☰</label>
         <input type="checkbox" id="hamburger">
         <!-- Left menu ul/li -->
         [[block page_left_menu]][[end]]
-        [[include 'left_menu.html']]
         <!-- Right menu ul/li -->
         <ul>
           [[if globals().get('user'):]]
