--- a/flvsio/templates/sockjs/index.html
+++ b/flvsio/templates/sockjs/index.html
@@ -87,7 +87,12 @@
 </script>
 </head>
 <body>
-<h3>Chat! https://github.com/mrjoes/sockjs-tornado/blob/master/examples/chat/chat.py</h3>
+
+        <a href="[[=URL('index')]]">
+          <b><script>document.write(window.location.href.split('/')[3]);</script></b>
+        </a>
+
+<h3>https://github.com/mrjoes/sockjs-tornado/blob/master/examples/chat/chat.py</h3>
 <div id="protocols" style="float: right">
   <ul>
     <li>
