--- a/ssep4w/templates/sse_chart.html
+++ b/ssep4w/templates/sse_chart.html
@@ -11,6 +11,17 @@
              <input type="submit" value="menu">
     </form>
 
+<script>
+    function getURL() {
+        window.open(  window.location.href  );
+    }
+</script>
+
+    <button type="button" onclick="getURL();">new tab</button>
+
+
+
+
 <div class="container">
     <div class="row">
         <div class="col-12">
