--- a/ssep4w/templates/stream_sqrt.html
+++ b/ssep4w/templates/stream_sqrt.html
@@ -5,6 +5,16 @@
          </form>
 
 
+<script>
+    function getURL() {
+        window.open(  window.location.href  );
+    }
+</script>
+     
+    <button type="button" onclick="getURL();">new tab</button>
+
+
+
 <p>This is the latest output: <span id="latest"></span></p>
 <!-- p>This is all the output:</p --->
 <p id="output">This is all the output: </p>
