--- a/flvsio/templates/js-sliders.html
+++ b/flvsio/templates/js-sliders.html
@@ -4,7 +4,7 @@
 
 
     <title>Sync Sliders</title>
-    <script src="https://cdn.socket.io/4.3.2/socket.io.min.js"></script>
+    <script src="https://cdn.socket.io/4.4.1/socket.io.min.js"></script>
 
 <style>
 
@@ -12,6 +12,8 @@ body{
     background: #F8F8F8;
     font-family: 'Courier New', Courier, monospace;
 }
+
+
 
 
 p, input[type="text"]
@@ -28,31 +30,13 @@ width: 100%;
 
 <!-- https://stackoverflow.com/questions/6890218/css-background-image-opacity -->
 
-#bg {
+#xbg {
   width: 100%;
   height: 100%;
 }
 
 
 
-#id {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  opacity: 0.99;
-}
-
-#id::before {
-  content: "";
-  position: absolute;
-    width:  200px;
-    height: 200px;
-    background-size: 50% 50%;
-    opacity: 0.3;
-  z-index: -1;
-
-
-}
 
 
 
@@ -62,12 +46,15 @@ width: 100%;
    height: 100%;
    background-image: url(  [[ = URL('static/logop4w.png') ]] );
    background-size: 150px 150px;
-   background-repeat: no-repeat, no-repeat;
+   background-repeat: no-repeat;
+   background-position: center; 
 
 }
 
 .bg-color {background:rgba(0,0,0,0);}
-.hero:hover .bg-color {background: rgba(0,0,0,.05);}
+.hero:hover .bg-color {background: rgba(0,0,0,.05);
+
+}
 
 
 
@@ -125,9 +112,9 @@ function debounce(func, timeout = 250){
                   txt1 = document.getElementById('txt1'),
                   sync_txt1 = document.getElementById('sync_txt1'),
                   info =  document.getElementById('status');
-            const yourImg = document.querySelector('.hero'); 
+            const myImg = document.querySelector('.hero'); 
                  
-            info.innerHTML= 'disconnected; run chan_sio.py';
+            info.innerHTML= 'disconnected! run chan_sio.py';
             info.style.color='red';
 
 set_size = function(v1, v2) {
@@ -137,8 +124,8 @@ set_size = function(v1, v2) {
    let v2x = v2.toString() + 'px';
    console.log(v1x)
    console.log(v2x)
-   if(yourImg && yourImg.style) {
-    yourImg.style.backgroundSize = v1x +' ' +  v2x;
+   if(myImg && myImg.style) {
+    myImg.style.backgroundSize = v1x +' ' +  v2x;
     }
 
 }
@@ -158,6 +145,7 @@ set_size = function(v1, v2) {
                slider2.value =msg[1] ;
                txt1.value =  msg[2] ;
                sync_txt1.innerHTML=msg[2] ;
+               set_size( msg[0], msg[1]  );
             }
 
 
@@ -174,17 +162,18 @@ set_size = function(v1, v2) {
 
             socket.on('connect', ()=> {
                 socket.emit('sync_connect', {data: 'hello from ' + py_var });
-                info.innerHTML = 'connect, sio_channel=  ' + sio_url
+                info.innerHTML = 'connect, ' + sio_url
                 info.style.color='blue';
             });
 
             socket.on('disconnect', ()=> {
-                info.innerHTML= 'disconnected; run chan_sio.py';
+                info.innerHTML= 'disconnected! run chan_sio.py';
                 info.style.color='red';
             });
 
             socket.on('reconnect', ()=>{
                 document.getElementById("status").innerHTML = 'reconnect!'
+                info.style.color='red';
             });
 
 
