--- a/ssep4w/templates/sse_progress.html
+++ b/ssep4w/templates/sse_progress.html
@@ -22,6 +22,17 @@
              <input type="submit" value="menu">
          </form>
 
+<script>
+    function getURL() {
+        window.open(  window.location.href  );
+    }
+</script>
+
+    <button type="button" onclick="getURL();">new tab</button>
+
+
+
+
     <div class="progress" style="width: 50%; margin: 50px;">
         <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
             <span class="progress-bar-label">0%</span>
