--- a/ssep4w/templates/chart3/chart3.html
+++ b/ssep4w/templates/chart3/chart3.html
@@ -12,11 +12,13 @@
 
 [[ end ]]
 
-<p id='logstr'></p>
+<span id='logstr'></span>
 
+
+<div  style="float: right;">
 <button type="button" onclick="window.open(  window.location.href  );">new tab</button>
 <button id="breaj_but" type="button" onclick="window.location.reload(true);">reload</button>
-
+</div>
 
 <canvas id="canvas" style="height:100%;"></canvas>
 
