--- a/ssep4w/templates/chart2/chart.html
+++ b/ssep4w/templates/chart2/chart.html
@@ -4,11 +4,13 @@
 <button id="breaj_but" type="button" onclick="window.location.reload(true);">reload</button>
 
 
-<p>./py4web.py run apps --watch=off -s wsgirefThreadingServer</p>
-<p id='logstr'></p>
-<p id='gen_id'></p>
+<span>./py4web.py run apps --watch=off -s wsgirefThreadingServer</span>
+<div>
+<span id='gen_id'></span>
+<span id='logstr'></span>
+</div>
 
-<div id="chart" style="width: 70%; height: 200px;"></div>
+<div id="chart" style="width: 80%; height: 300px;"></div>
 
 [[block page_scripts]]
 
